forth/test/fail/test_const_fold_rhs_umod_zero.af
use' ../../lang.af
fun: test_const_fold_rhs_umod_zero { val -- out } val 0 umod end
